--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <link rel="stylesheet" href="./style/main.css">
   <link rel="stylesheet" href="./style/image.css">
   <link rel="stylesheet" href="./style/content.css">
+  <link rel="stylesheet" href="./style/mediaqr.css">
 
 </head>
 
@@ -42,7 +43,7 @@
       <p class="paragraph">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you
         like!</p>
       <div class="plan-option">
-        <img src="./images/icon-music.svg" alt="music icon">
+        <img class="icon-music" src="./images/icon-music.svg" alt="music icon">
         <div class="options">
           <p class="option-h1">Annual Plan</p>
           <p class="option-h2">$59.99/year</p>
